--- a/Attendance/main/templates/member.html
+++ b/Attendance/main/templates/member.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <title>멋쟁이사자처럼 at 순천향대학교</title>
+    <link rel="stylesheet" type="text/css" href="{%static 'css/member.css'%}">
     <style>
         * {
             font-size: 16px;
@@ -16,27 +18,97 @@
 </head>
 
 <body>
-    <div style="width:10;height:300">
-    {{ data|safe }}
+
+    <nav class="main-menu">
+
+
+
+        <div>
+            <a class="logo" href="#">
+            </a>
+        </div>
+        <div class="settings">
+        </div>
+        <div class="scrollbar" id="style-1">
+
+            <ul>
+                <li>
+                    <a href="{% url 'main' %}">
+                        <i class="fa fa-home fa-lg"></i>
+                        <span class="nav-text">출석부 생성</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'show' %}">
+                        <i class="fa fa-user fa-lg"></i>
+                        <span class="nav-text">날짜별 조회</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'member' %}">
+                        <i class="fa fa-user fa-lg"></i>
+                        <span class="nav-text">학생별 조회</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'member' %}">
+                        <i class="fa fa-user fa-lg"></i>
+                        <span class="nav-text">학생 추가</span>
+                    </a>
+                </li>
+
+            </ul>
+
+            <ul>
+                {% for names in names %}
+
+                <li class="darkerli">
+                    <a href="{% url 'detail' names.id %}">
+                        <i class="fa fa-user fa-lg"></i>
+                        <span class="nav-text">{{names.name}}</span>
+                    </a>
+                </li>
+                {% endfor %}
+
+            </ul>
+        </div>
+
+
+    </nav>
+
+    <div class="content">
+        <div class="member_info">
+            <h3>{{name.name}}의 출석부</h3>
+            <p>{{name.student_id}}<br>{{name.major}}</p>
+        </div>
+        <div class="member_image">{{ data|safe }}</div>
+
+        <div class="member_attendance_all">
+
+            <table>
+                <thead>
+                    <th>날짜</th>
+                    <th>출결</th>
+                </thead>
+                <tbody>
+                    {% for member_name in member_name %}
+                    <tr>
+                        <td>{{member_name.date}}</td>
+                        <td bgcolor="#FFEFD5">{{member_name.attendance}}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 
-    {% for member_name in member_name %}
 
-    <div class="aii_member">
-        <p>{{member_name.attendance}}</p>
-        <p>{{member_name.date}}</p>
 
-    </div>
-    </a>
-    {% endfor %}
 
-    <div class="all_member">
-        {% for names in names %}
-        <a href="{% url 'detail' names.id %}">
-            <p>{{names.name}}</p>
-        </a>
-        {% endfor %}
-    </div>
+
 
 </body>
 
