--- a/Attendance/main/templates/show.html
+++ b/Attendance/main/templates/show.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <title>멋쟁이사자처럼 at 순천향대학교</title>
+    <link rel="stylesheet" type="text/css" href="{%static 'css/produce.css'%}">
     <style>
         * {
             font-size: 16px;
@@ -15,12 +18,57 @@
 </head>
 
 <body>
+
+    <nav class="main-menu">
+
+
+
+        <div>
+            <a class="logo" href="#">
+            </a>
+        </div>
+        <div class="settings">
+        </div>
+        <div class="scrollbar" id="style-1">
+
+            <ul>
+                <li>
+                    <a href="{% url 'main' %}">
+                        <i class="fa fa-home fa-lg"></i>
+                        <span class="nav-text">출석부 생성</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'show' %}">
+                        <i class="fa fa-user fa-lg"></i>
+                        <span class="nav-text">날짜별 조회</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'member' %}">
+                        <i class="fa fa-user fa-lg"></i>
+                        <span class="nav-text">학생별 조회</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'member' %}">
+                        <i class="fa fa-user fa-lg"></i>
+                        <span class="nav-text">학생 추가</span>
+                    </a>
+                </li>
+
+            </ul>
+    </nav>
+
     <div class="regibox" align="center">
         <form method="POST" action="show1">
             {% csrf_token %}
             <input type="date" id="date" name="date" value="2021-02-20" min="2021-02-20" max="2022-01-01">
             <br><br>
-            <input type="submit" value="출석부 조회">
+            <button type="submit" value="submit">출석부 조회</button>
         </form>
     </div>
 </body>
