--- a/Attendance/main/templates/show1.html
+++ b/Attendance/main/templates/show1.html
@@ -1,11 +1,87 @@
-<table border="1" width="500">
-    <tr>
-        <td>이름</td>
-        <td>출결</td>
-    {% for info in info %}
-    <tr>
-        <td>{{info.name}}</td>
-        <td>{{info.attendance}}</td>
-    </tr>
-    {% endfor %}
-</table>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <title>멋쟁이사자처럼 at 순천향대학교</title>
+    <link rel="stylesheet" type="text/css" href="{%static 'css/show1.css'%}">
+    <style>
+        * {
+            font-size: 16px;
+            font-family: Consolas, sans-serif;
+        }
+    </style>
+</head>
+
+<body>
+
+    <nav class="main-menu">
+
+
+
+        <div>
+            <a class="logo" href="#">
+            </a>
+        </div>
+        <div class="settings">
+        </div>
+        <div class="scrollbar" id="style-1">
+
+            <ul>
+                <li>
+                    <a href="{% url 'main' %}">
+                        <i class="fa fa-home fa-lg"></i>
+                        <span class="nav-text">출석부 생성</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'show' %}">
+                        <i class="fa fa-user fa-lg"></i>
+                        <span class="nav-text">날짜별 조회</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'member' %}">
+                        <i class="fa fa-user fa-lg"></i>
+                        <span class="nav-text">학생별 조회</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'member' %}">
+                        <i class="fa fa-user fa-lg"></i>
+                        <span class="nav-text">학생 추가</span>
+                    </a>
+                </li>
+
+            </ul>
+    </nav>
+    <div class="table">
+        <h3>{{date}} 출석부</h3>
+        <table>
+            <thead>
+
+                <th>이름</th>
+                <th>출결</th>
+            </thead>
+            <tbody>
+                {% for info in info %}
+
+                <tr>
+
+                    <td>{{info.name}}</td>
+                    <td bgcolor="#FFEFD5">{{info.attendance}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</body>
+
+</html>
