--- a/Attendance/main/templates/show.html
+++ b/Attendance/main/templates/show.html
@@ -54,7 +54,7 @@
                 </li>
 
                 <li>
-                    <a href="{% url 'member' %}">
+                    <a href="{% url 'member_add' %}">
                         <i class="fa fa-user fa-lg"></i>
                         <span class="nav-text">학생 추가</span>
                     </a>
